--- a/mi_app/templates/ingresar_usdt.html
+++ b/mi_app/templates/ingresar_usdt.html
@@ -37,7 +37,14 @@
             </div>
             <div class="mb-3">
               <label for="tasa" class="form-label">Tasa</label>
-              <input type="number" step="0.000001" name="tasa" id="tasa" class="form-control" required>
+              <input type="number" 
+                     step="0.000001" 
+                     name="tasa" 
+                     id="tasa" 
+                     class="form-control" 
+                     required 
+                     inputmode="decimal"
+                     pattern="[0-9]*[.,]?[0-9]*">
             </div>
             <div class="mb-3">
               <label for="tradetype" class="form-label">Trade Type</label>
@@ -97,4 +104,35 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+
+<style>
+/* Quitar flechas del input number */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    margin: 0; 
+}
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+/* Personalizar select */
+.select-custom {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23333' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 0.7rem center;
+    background-size: 1em;
+    padding-right: 2.5rem;
+    cursor: pointer;
+}
+
+.select-custom:focus {
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+</style>
 {% endblock %}
