--- a/mi_app/templates/ingresar_usdt.html
+++ b/mi_app/templates/ingresar_usdt.html
@@ -1,5 +1,5 @@
 {% extends "admin/admin_base.html" %}
-{% block title %}Ingresar Compra USDT{% endblock %}
+{% block title %}Ingresar Transaccion{% endblock %}
 {% block admin_title %}{% endblock %}
 
 {% block breadcrumbs %}
@@ -7,7 +7,7 @@
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="{{ url_for('index') }}">Inicio</a></li>
     <li class="breadcrumb-item"><a href="{{ url_for('admin.index') }}">Módulo Restringido</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Ingresar Compra USDT</li>
+    <li class="breadcrumb-item active" aria-current="page">Ingresar Transaccion</li>
   </ol>
 </nav>
 {% endblock %}
@@ -19,7 +19,7 @@
       <div class="card shadow-lg">
         <!-- Cabecera del card con el título único -->
         <div class="card-header bg-azul-oscuro text-white text-center">
-          <h3 class="mb-0">Ingresar Compra de USDT</h3>
+          <h3 class="mb-0">Ingresar Transaccion</h3>
         </div>
         <div class="card-body">
           <form method="post" action="{{ url_for('admin.ingresar_usdt') }}">
