--- a/mi_app/templates/admin/admin_base.html
+++ b/mi_app/templates/admin/admin_base.html
@@ -25,10 +25,7 @@
           <i class="fas fa-dollar-sign"></i> Ingresar Transaccion
         </a>
         <a href="{{ url_for('admin.resumen_compras_usdt') }}" class="list-group-item list-group-item-action {% if request.endpoint == 'admin.resumen_compras_usdt' %}active{% endif %}">
-          <i class="fas fa-list"></i> Compras USDT
-        </a>
-        <a href="{{ url_for('admin.resumen_ventas_usdt') }}" class="list-group-item list-group-item-action {% if request.endpoint == 'admin.resumen_ventas_usdt' %}active{% endif %}">
-          <i class="fas fa-list"></i> Ventas USDT
+          <i class="fas fa-list"></i> Transacciones USDT/CLP
         </a>
         <a href="{{ url_for('admin.tasa_actual') }}" class="list-group-item list-group-item-action {% if request.endpoint == 'admin.tasa_actual' %}active{% endif %}">
           <i class="fas fa-chart-line"></i> Tasa actual
