--- a/mi_app/templates/admin/resumen_compras_usdt.html
+++ b/mi_app/templates/admin/resumen_compras_usdt.html
@@ -1,5 +1,5 @@
 {% extends "admin/admin_base.html" %}
-{% block title %}Compras USDT{% endblock %}
+{% block title %}Transacciones USDT/CLP{% endblock %}
 
 {% block admin_title %}{% endblock %}
 
@@ -9,7 +9,7 @@
     <div class="col-lg-10 col-md-12">
       <div class="card shadow-lg">
         <div class="card-header bg-azul-oscuro text-white text-center">
-          <h3 class="mb-0">Compras y Ventas USDT</h3>
+          <h3 class="mb-0">Transacciones USDT/CLP</h3>
         </div>
         <div class="card-body">
           <!-- Formulario de fecha -->
